Revert "worst game ever (#25)"
This reverts commit ed66afd4042b19c172843d57477e24340cd56128.

--- a/Sandbox/CMakeLists.txt
+++ b/Sandbox/CMakeLists.txt
@@ -3,48 +3,7 @@
 # ==============================
 # Sandbox Application (Executable)
 # ==============================
-add_executable(Sandbox 
-    # Entry Point
-    src/Source.cpp
-    
-    # Arena Protocol Game (Main Layer)
-    src/ArenaProtocol/ArenaProtocolLayer.cpp
-    src/ArenaProtocol/ArenaProtocolLayer.h
-    
-    # Components
-    src/Components/PlayerStatsComponent.h
-    src/Components/HealthComponent.h
-    src/Components/EnemyAIComponent.h
-    src/Components/TurretAIComponent.h
-    src/Components/ChargerAIComponent.h
-    src/Components/TriggerComponent.h
-    src/Components/BossAIComponent.h
-    src/Components/XPGemVisualComponent.h
-    src/Components/ObstacleComponent.h
-    src/Components/WeaponComponent.h
-    src/Components/CameraEffectsComponent.h
-    src/Components/WaveManagerComponent.h
-    
-    # Game Systems
-    src/Systems/EnemyAISystem.cpp
-    src/Systems/EnemyAISystem.h
-    src/Systems/BossAISystem.cpp
-    src/Systems/BossAISystem.h
-    src/Systems/BulletSystem.cpp
-    src/Systems/BulletSystem.h
-    src/Systems/XPCollectionSystem.cpp
-    src/Systems/XPCollectionSystem.h
-    src/Systems/WaveSystem.cpp
-    src/Systems/WaveSystem.h
-    
-    # Entity Factory
-    src/Factory/EntityFactory.cpp
-    src/Factory/EntityFactory.h
-    
-    # Chamber/Level Management
-    src/Chambers/ChamberManager.cpp
-    src/Chambers/ChamberManager.h
-)
+add_executable(Sandbox src/Source.cpp)
 
 # Set output directory
 set_target_properties(Sandbox PROPERTIES
