Created SDK type installer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -202,3 +202,132 @@ add_subdirectory(Pillar)
 add_subdirectory(Sandbox)
 add_subdirectory(PillarEditor)
 add_subdirectory(Tests)
+
+
+# ==============================
+# SDK Install & Packaging
+# ==============================
+option(PILLAR_ENABLE_SDK_INSTALL "Enable SDK-style install/export targets" ON)
+
+if(PILLAR_ENABLE_SDK_INSTALL)
+  include(GNUInstallDirs)
+  include(CMakePackageConfigHelpers)
+
+  # Keep this independent from project() VERSION to avoid forcing a repo-wide version policy.
+  set(PILLAR_PACKAGE_VERSION "0.1.0")
+  set(PILLAR_INSTALL_CMAKEDIR "${CMAKE_INSTALL_LIBDIR}/cmake/Pillar")
+
+  # --- Install binaries/libraries ---
+  if(TARGET Pillar)
+    install(TARGETS Pillar
+      ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}/$<CONFIG>"
+      LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}/$<CONFIG>"
+      RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}/$<CONFIG>"
+    )
+  endif()
+
+  # Install third-party libraries that Pillar depends on.
+  # We intentionally do NOT export these CMake targets (their include dirs often point to build-machine paths).
+  set(_PILLAR_SDK_DEP_LIB_TARGETS "")
+  foreach(_t IN ITEMS glfw glad_gl_core_46 imgui box2d OpenAL spdlog)
+    if(TARGET ${_t})
+      list(APPEND _PILLAR_SDK_DEP_LIB_TARGETS ${_t})
+    endif()
+  endforeach()
+  if(_PILLAR_SDK_DEP_LIB_TARGETS)
+    install(TARGETS ${_PILLAR_SDK_DEP_LIB_TARGETS}
+      ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}/$<CONFIG>"
+      LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}/$<CONFIG>"
+      RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}/$<CONFIG>"
+    )
+  endif()
+
+  if(TARGET PillarEditor)
+    install(TARGETS PillarEditor
+      RUNTIME DESTINATION "editor"
+    )
+
+    if(EXISTS "${CMAKE_SOURCE_DIR}/PillarEditor/assets")
+      install(DIRECTORY "${CMAKE_SOURCE_DIR}/PillarEditor/assets/"
+        DESTINATION "editor/assets"
+      )
+    endif()
+  endif()
+
+  # --- Install engine headers ---
+  install(DIRECTORY "${CMAKE_SOURCE_DIR}/Pillar/src/Pillar/"
+    DESTINATION "include/Pillar"
+    FILES_MATCHING PATTERN "*.h"
+  )
+  install(FILES "${CMAKE_SOURCE_DIR}/Pillar/src/Pillar.h"
+    DESTINATION "include"
+  )
+
+  # --- Install third-party headers required by public API ---
+  # Note: these are FetchContent source dirs; they exist after FetchContent_MakeAvailable().
+  if(DEFINED glm_SOURCE_DIR)
+    install(DIRECTORY "${glm_SOURCE_DIR}/glm/"
+      DESTINATION "include/thirdparty/glm"
+    )
+  endif()
+  if(DEFINED entt_SOURCE_DIR)
+    install(DIRECTORY "${entt_SOURCE_DIR}/src/entt/"
+      DESTINATION "include/thirdparty/entt"
+    )
+  endif()
+  if(DEFINED spdlog_SOURCE_DIR)
+    install(DIRECTORY "${spdlog_SOURCE_DIR}/include/"
+      DESTINATION "include/thirdparty"
+    )
+  endif()
+  if(DEFINED nlohmann_json_SOURCE_DIR)
+    install(DIRECTORY "${nlohmann_json_SOURCE_DIR}/include/nlohmann/"
+      DESTINATION "include/thirdparty/nlohmann"
+    )
+  endif()
+  if(DEFINED box2d_SOURCE_DIR)
+    if(EXISTS "${box2d_SOURCE_DIR}/include/box2d")
+      install(DIRECTORY "${box2d_SOURCE_DIR}/include/box2d/"
+        DESTINATION "include/thirdparty/box2d"
+      )
+    endif()
+  endif()
+
+  # --- Install templates/docs/license (added in later steps) ---
+  if(EXISTS "${CMAKE_SOURCE_DIR}/templates")
+    install(DIRECTORY "${CMAKE_SOURCE_DIR}/templates/"
+      DESTINATION "templates"
+    )
+  endif()
+
+  if(EXISTS "${CMAKE_SOURCE_DIR}/LICENSE.txt")
+    install(FILES "${CMAKE_SOURCE_DIR}/LICENSE.txt" DESTINATION ".")
+  endif()
+
+  # --- CMake package config for find_package(Pillar CONFIG) ---
+  configure_package_config_file(
+    "${CMAKE_SOURCE_DIR}/cmake/PillarConfig.cmake.in"
+    "${CMAKE_CURRENT_BINARY_DIR}/PillarConfig.cmake"
+    INSTALL_DESTINATION "${PILLAR_INSTALL_CMAKEDIR}"
+  )
+
+  write_basic_package_version_file(
+    "${CMAKE_CURRENT_BINARY_DIR}/PillarConfigVersion.cmake"
+    VERSION "${PILLAR_PACKAGE_VERSION}"
+    COMPATIBILITY SameMajorVersion
+  )
+
+  install(FILES
+    "${CMAKE_CURRENT_BINARY_DIR}/PillarConfig.cmake"
+    "${CMAKE_CURRENT_BINARY_DIR}/PillarConfigVersion.cmake"
+    DESTINATION "${PILLAR_INSTALL_CMAKEDIR}"
+  )
+
+  # --- CPack ZIP generator (creates an SDK-style ZIP from install rules) ---
+  set(CPACK_GENERATOR "ZIP")
+  set(CPACK_PACKAGE_NAME "PillarSDK")
+  set(CPACK_PACKAGE_VENDOR "Pillar")
+  set(CPACK_PACKAGE_VERSION "${PILLAR_PACKAGE_VERSION}")
+  set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR}")
+  include(CPack)
+endif()
